Fix Safari z-index bug.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,6 +125,7 @@ a:hover {
     overflow: scroll;
     font-size: 14px;
     line-height: 20px;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 #infoPopup p {
